<resources>
    <string name="app_name">CodeChallenge</string>
    <string name="action_settings">Settings</string>

    <string name="farmers_panel">Farmers\' Panel</string>
    <string name="type_to_search">Type to search</string>
    <string name="farmers_panel_description">Lorem ipsum dolor sit amet consectetur. Est amet lobortis etiam justo vel.</string>
    <string name="personal_details">Personal details</string>
    <string name="item_one">Item one</string>
    <string name="item_two">Item two</string>
    <string name="item_three">Item three</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_place">Birth Place</string>
    <string name="dob">Date of Birth</string>
    <string name="house_number">House Number</string>
    <string name="community">Community</string>
    <string name="occupation">Occupation</string>
    <string name="district">District</string>
    <string name="region">Region</string>
    <string name="marital_status">Marital Status</string>
    <string name="bio">Bio</string>
    <string name="write_short_description">Write a short description</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
</resources>